fix navbar bleed

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -8,7 +8,7 @@
   justify-content: space-between;
   align-items: center;
   transition: all .5s ease-in;
-  z-index: 100;
+  z-index: 50;
 }
 
 .nav-black {
